# claude-code-plugin

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements_linux.txt  requirements_win.txt
.claude/memory/: MEMORY.md  feedback_remote_concise.md
remote/: .env.example  cli.py  start.sh  tmux_bot.py  web_server.py
remote/.certs/: cert.pem  key.pem
screenshot/: cli.py  screenshot_input.py
scripts/: setup_service.sh
shared/: clipboard_image.py  config.py  hotkey.py  ssh_remote.py  tmux_utils.py  transcribe.py
voice/: cli.py  voice_input.py  voice_input_linux.py  voice_input_win.py
